# aiui_linux_demo

./: .gitignore  README.md
bin_x64/: aiui_sample
bin_x64/AIUI/assets/vtn/: vtn.ini
bin_x64/AIUI/msc/: msc.cfg
bin_x64/AIUI/msc/a8dffe17fc884c61d2fdc54852ec6812/local.5.6.1069.1005/: local.cache
bin_x64/AIUI/msc/a8dffe17fc884c61d2fdc54852ec6812/ns.5.6.1069.1005/: ns.cache
include/aiui/: AIUI.h  AIUICommon.h  AIUIConstant.h  AIUIErrorCode.h  AIUIType.h  AIUI_C.h  AIUI_V2.h
samples/: 32bit_make.sh  64bit_make.sh  CMakeLists.txt
samples/AIUI/cfg/: aiui.cfg
samples/build_x64/: CMakeCache.txt  Makefile  cmake_install.cmake
samples/src/: alsa.c  alsa.h  demo.cpp  linuxrec.c  linuxrec.h  speech_recognizer.c  speech_recognizer.h
